# moex_jarvisbot

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  main.py
bot/handlers/: __init__.py  callbacks.py  commands.py  common.py  diagnose.py  setup.py
bot/keyboards/: inline.py
bot/middlewares/: auth.py  input_validation.py  logging.py  rate_limit.py
bot/services/: kafka_consumer.py  kafka_producer.py  metrics.py  request_tracker.py  schema_validator.py
bot/utils/: markdown.py  masking.py  validators.py
schemas/: tg.requests.schema.json  worker.dlq.schema.json  worker.responses.schema.json
tests/: test_masking.py  test_schema.py  test_validators.py
